# humanoid-robotic-book

./: .gitignore  404.html  Dockerfile  Procfile  README.md  api_requirements.txt  api_server.py  app.py  docusaurus.config.ts  huggingface.yml  index.html  package-lock.json  package.json  rag_chatbot_final.py  rag_chatbot_fixed.py  rag_chatbot_improved.py  requirements.txt  sidebars.ts  sitemap.xml  working_rag_chatbot.py
api/: .gitignore  README.md  pyproject.toml  test_chat.py  test_qdrant.py  test_rag.py
api/docs/: chapter-05-perception.md  chapter-10-humanoid-platforms.md  overview.md
api/docs/chapter-01/: lesson-01-intro.md  lesson-02-design-principles.md
api/docs/chapter-02/: lesson-01-locomotion.md
api/docs/chapter-03/: lesson-01-embodied-intelligence.md
api/scripts/: index_content.py
api/src/: main.py
api/src/config/: settings.py
api/src/routes/: chat.py  health.py
api/src/services/: embeddings.py  gemini_service.py  llm_service.py  local_response_service.py  openrouter_service.py  qdrant_service.py  rag.py
api/tests/: test_chat.py  test_health.py  test_integration.py
backend/: check_qdrant.py  ingest_content.py  init_rag_system.py  pyproject.toml  requirements.txt  simple_rag_backend.py  start_server.py
backend/src/: agent.py  config.py  main.py
backend/src/api/: auth.py  chatbot.py  personalization.py  translation.py
backend/src/models/: db_schema.py  user.py
backend/src/services/: auth_service.py  caching_service.py  content_ingestion.py  personalization_service.py  rag_service.py  textbook_content_loader.py  translation_service.py  (+1 more)
(+246 files in other folders)
